--- a/app/resources/css/style.css
+++ b/app/resources/css/style.css
@@ -37,6 +37,35 @@ body {
     color: var(--jet);
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+}
+
+input {
+    width: 200px; 
+    height: 25px; 
+    padding: 5px;
+    margin: 10px;
+    border: 3px solid var(--lightblue); 
+    border-radius: 10px;
+}
+
+input[type="submit"] {
+    width: 216px; 
+    height: 41px; 
+    color: white; 
+    background-color: var(--lightblue);
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    color: var(--lightblue); 
+    background-color: white;
+}
+
 div.topbar {
     box-shadow: 0px 1px 5px grey;
 }
