--- a/app/resources/css/style.css
+++ b/app/resources/css/style.css
@@ -147,5 +147,6 @@ div.button-new-card {
     font-weight: bold;
     font-size: 30px;
     color: white;
-    text-align: center;;
+    text-align: center;
+    cursor: pointer;
 }
